Revise "Use PreconditionAssertions wherever feasible"
This commit picks up where the previous commit left off.

See #4943
See #5019