@@ -50,7 +50,6 @@ import java.util.stream.Stream;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.function.Executable;
 import org.junit.jupiter.api.io.TempDir;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
@@ -74,9 +73,9 @@ class DiscoverySelectorsTests {
 		@SuppressWarnings("DataFlowIssue")
 		@Test
 		void selectUriByName() {
-			assertViolatesPrecondition(() -> selectUri((String) null));
-			assertViolatesPrecondition(() -> selectUri("   "));
-			assertViolatesPrecondition(() -> selectUri("foo:"));
+			assertPreconditionViolationFor(() -> selectUri((String) null));
+			assertPreconditionViolationFor(() -> selectUri("   "));
+			assertPreconditionViolationFor(() -> selectUri("foo:"));
 
 			var uri = "https://junit.org";
 
@@ -87,8 +86,8 @@ class DiscoverySelectorsTests {
 		@SuppressWarnings("DataFlowIssue")
 		@Test
 		void selectUriByURI() {
-			assertViolatesPrecondition(() -> selectUri((URI) null));
-			assertViolatesPrecondition(() -> selectUri("   "));
+			assertPreconditionViolationFor(() -> selectUri((URI) null));
+			assertPreconditionViolationFor(() -> selectUri("   "));
 
 			var uri = URI.create("https://junit.org");
 
@@ -113,8 +112,8 @@ class DiscoverySelectorsTests {
 		@SuppressWarnings("DataFlowIssue")
 		@Test
 		void selectFileByName() {
-			assertViolatesPrecondition(() -> selectFile((String) null));
-			assertViolatesPrecondition(() -> selectFile("   "));
+			assertPreconditionViolationFor(() -> selectFile((String) null));
+			assertPreconditionViolationFor(() -> selectFile("   "));
 
 			var path = "src/test/resources/do_not_delete_me.txt";
 
@@ -128,8 +127,8 @@ class DiscoverySelectorsTests {
 		@Test
 		void selectFileByNameAndPosition() {
 			var filePosition = FilePosition.from(12, 34);
-			assertViolatesPrecondition(() -> selectFile((String) null, filePosition));
-			assertViolatesPrecondition(() -> selectFile("   ", filePosition));
+			assertPreconditionViolationFor(() -> selectFile((String) null, filePosition));
+			assertPreconditionViolationFor(() -> selectFile("   ", filePosition));
 
 			var path = "src/test/resources/do_not_delete_me.txt";
 
@@ -143,8 +142,8 @@ class DiscoverySelectorsTests {
 		@SuppressWarnings("DataFlowIssue")
 		@Test
 		void selectFileByFileReference() throws Exception {
-			assertViolatesPrecondition(() -> selectFile((File) null));
-			assertViolatesPrecondition(() -> selectFile(new File("bogus/nonexistent.txt")));
+			assertPreconditionViolationFor(() -> selectFile((File) null));
+			assertPreconditionViolationFor(() -> selectFile(new File("bogus/nonexistent.txt")));
 
 			var currentDir = new File(".").getCanonicalFile();
 			var relativeDir = new File("..", currentDir.getName());
@@ -161,8 +160,8 @@ class DiscoverySelectorsTests {
 		@Test
 		void selectFileByFileReferenceAndPosition() throws Exception {
 			var filePosition = FilePosition.from(12, 34);
-			assertViolatesPrecondition(() -> selectFile((File) null, filePosition));
-			assertViolatesPrecondition(() -> selectFile(new File("bogus/nonexistent.txt"), filePosition));
+			assertPreconditionViolationFor(() -> selectFile((File) null, filePosition));
+			assertPreconditionViolationFor(() -> selectFile(new File("bogus/nonexistent.txt"), filePosition));
 
 			var currentDir = new File(".").getCanonicalFile();
 			var relativeDir = new File("..", currentDir.getName());
@@ -237,8 +236,8 @@ class DiscoverySelectorsTests {
 		@SuppressWarnings("DataFlowIssue")
 		@Test
 		void selectDirectoryByName() {
-			assertViolatesPrecondition(() -> selectDirectory((String) null));
-			assertViolatesPrecondition(() -> selectDirectory("   "));
+			assertPreconditionViolationFor(() -> selectDirectory((String) null));
+			assertPreconditionViolationFor(() -> selectDirectory("   "));
 
 			var path = "src/test/resources";
 
@@ -251,8 +250,8 @@ class DiscoverySelectorsTests {
 		@SuppressWarnings("DataFlowIssue")
 		@Test
 		void selectDirectoryByFileReference() throws Exception {
-			assertViolatesPrecondition(() -> selectDirectory((File) null));
-			assertViolatesPrecondition(() -> selectDirectory(new File("bogus/nonexistent")));
+			assertPreconditionViolationFor(() -> selectDirectory((File) null));
+			assertPreconditionViolationFor(() -> selectDirectory(new File("bogus/nonexistent")));
 
 			var currentDir = new File(".").getCanonicalFile();
 			var relativeDir = new File("..", currentDir.getName());
@@ -299,20 +298,21 @@ class DiscoverySelectorsTests {
 		@SuppressWarnings("DataFlowIssue")
 		@Test
 		void selectClasspathResourcesPreconditions() {
-			assertViolatesPrecondition(() -> selectClasspathResource((String) null));
-			assertViolatesPrecondition(() -> selectClasspathResource(""));
-			assertViolatesPrecondition(() -> selectClasspathResource("/"));
-			assertViolatesPrecondition(() -> selectClasspathResource("    "));
-			assertViolatesPrecondition(() -> selectClasspathResource("/   "));
-			assertViolatesPrecondition(() -> selectClasspathResource("\t"));
-			assertViolatesPrecondition(() -> selectClasspathResource("/\t"));
-			assertViolatesPrecondition(() -> selectClasspathResourceByName(null));
-			assertViolatesPrecondition(() -> selectClasspathResourceByName(Collections.emptySet()));
-			assertViolatesPrecondition(() -> selectClasspathResourceByName(Collections.singleton(null)));
-			assertViolatesPrecondition(() -> selectClasspathResourceByName(Set.of(new StubResource(null))));
-			assertViolatesPrecondition(() -> selectClasspathResourceByName(Set.of(new StubResource(""))));
-			assertViolatesPrecondition(
-				() -> selectClasspathResourceByName(Set.of(new StubResource("a"), new StubResource("b"))));
+			// @formatter:off
+			assertPreconditionViolationFor(() -> selectClasspathResource((String) null));
+			assertPreconditionViolationFor(() -> selectClasspathResource(""));
+			assertPreconditionViolationFor(() -> selectClasspathResource("/"));
+			assertPreconditionViolationFor(() -> selectClasspathResource("    "));
+			assertPreconditionViolationFor(() -> selectClasspathResource("/   "));
+			assertPreconditionViolationFor(() -> selectClasspathResource("\t"));
+			assertPreconditionViolationFor(() -> selectClasspathResource("/\t"));
+			assertPreconditionViolationFor(() -> selectClasspathResourceByName(null));
+			assertPreconditionViolationFor(() -> selectClasspathResourceByName(Collections.emptySet()));
+			assertPreconditionViolationFor(() -> selectClasspathResourceByName(Collections.singleton(null)));
+			assertPreconditionViolationFor(() -> selectClasspathResourceByName(Set.of(new StubResource(null))));
+			assertPreconditionViolationFor(() -> selectClasspathResourceByName(Set.of(new StubResource(""))));
+			assertPreconditionViolationFor(() -> selectClasspathResourceByName(Set.of(new StubResource("a"), new StubResource("b"))));
+			// @formatter:on
 		}
 
 		@Test
@@ -340,17 +340,17 @@ class DiscoverySelectorsTests {
 		@Test
 		void getMissingClasspathResources() {
 			var selector = selectClasspathResource("org/junit/platform/commons/no-such-example.resource");
-			assertViolatesPrecondition(selector::getResources);
+			assertPreconditionViolationFor(selector::getResources);
 		}
 
 		@SuppressWarnings("DataFlowIssue")
 		@Test
 		void selectClasspathResourcesWithFilePosition() {
 			var filePosition = FilePosition.from(12, 34);
-			assertViolatesPrecondition(() -> selectClasspathResource(null, filePosition));
-			assertViolatesPrecondition(() -> selectClasspathResource("", filePosition));
-			assertViolatesPrecondition(() -> selectClasspathResource("    ", filePosition));
-			assertViolatesPrecondition(() -> selectClasspathResource("\t", filePosition));
+			assertPreconditionViolationFor(() -> selectClasspathResource(null, filePosition));
+			assertPreconditionViolationFor(() -> selectClasspathResource("", filePosition));
+			assertPreconditionViolationFor(() -> selectClasspathResource("    ", filePosition));
+			assertPreconditionViolationFor(() -> selectClasspathResource("\t", filePosition));
 
 			// with unnecessary "/" prefix
 			var selector = selectClasspathResource("/foo/bar/spec.xml", filePosition);
@@ -422,9 +422,9 @@ class DiscoverySelectorsTests {
 		@SuppressWarnings("DataFlowIssue")
 		@Test
 		void selectModuleByNamePreconditions() {
-			assertViolatesPrecondition(() -> selectModule(null));
-			assertViolatesPrecondition(() -> selectModule(""));
-			assertViolatesPrecondition(() -> selectModule("   "));
+			assertPreconditionViolationFor(() -> selectModule(null));
+			assertPreconditionViolationFor(() -> selectModule(""));
+			assertPreconditionViolationFor(() -> selectModule("   "));
 		}
 
 		@Test
@@ -436,8 +436,8 @@ class DiscoverySelectorsTests {
 		@SuppressWarnings("DataFlowIssue")
 		@Test
 		void selectModulesByNamesPreconditions() {
-			assertViolatesPrecondition(() -> selectModules(null));
-			assertViolatesPrecondition(() -> selectModules(Set.of("a", " ")));
+			assertPreconditionViolationFor(() -> selectModules(null));
+			assertPreconditionViolationFor(() -> selectModules(Set.of("a", " ")));
 		}
 
 		@Test
@@ -668,60 +668,62 @@ class DiscoverySelectorsTests {
 		@Test
 		@DisplayName("Preconditions: selectMethod(className, methodName)")
 		void selectMethodByClassNameAndMethodNamePreconditions() {
-			assertViolatesPrecondition(() -> selectMethod("TestClass", null));
-			assertViolatesPrecondition(() -> selectMethod("TestClass", ""));
-			assertViolatesPrecondition(() -> selectMethod("TestClass", "  "));
-			assertViolatesPrecondition(() -> selectMethod((String) null, "method"));
-			assertViolatesPrecondition(() -> selectMethod("", "method"));
-			assertViolatesPrecondition(() -> selectMethod("   ", "method"));
+			assertPreconditionViolationFor(() -> selectMethod("TestClass", null));
+			assertPreconditionViolationFor(() -> selectMethod("TestClass", ""));
+			assertPreconditionViolationFor(() -> selectMethod("TestClass", "  "));
+			assertPreconditionViolationFor(() -> selectMethod((String) null, "method"));
+			assertPreconditionViolationFor(() -> selectMethod("", "method"));
+			assertPreconditionViolationFor(() -> selectMethod("   ", "method"));
 		}
 
 		@SuppressWarnings("DataFlowIssue")
 		@Test
 		@DisplayName("Preconditions: selectMethod(className, methodName, parameterTypeNames)")
 		void selectMethodByClassNameMethodNameAndParameterTypeNamesPreconditions() {
-			assertViolatesPrecondition(() -> selectMethod("TestClass", null, "int"));
-			assertViolatesPrecondition(() -> selectMethod("TestClass", "", "int"));
-			assertViolatesPrecondition(() -> selectMethod("TestClass", "  ", "int"));
-			assertViolatesPrecondition(() -> selectMethod((String) null, "method", "int"));
-			assertViolatesPrecondition(() -> selectMethod("", "method", "int"));
-			assertViolatesPrecondition(() -> selectMethod("   ", "method", "int"));
-			assertViolatesPrecondition(() -> selectMethod("TestClass", "method", (String) null));
+			assertPreconditionViolationFor(() -> selectMethod("TestClass", null, "int"));
+			assertPreconditionViolationFor(() -> selectMethod("TestClass", "", "int"));
+			assertPreconditionViolationFor(() -> selectMethod("TestClass", "  ", "int"));
+			assertPreconditionViolationFor(() -> selectMethod((String) null, "method", "int"));
+			assertPreconditionViolationFor(() -> selectMethod("", "method", "int"));
+			assertPreconditionViolationFor(() -> selectMethod("   ", "method", "int"));
+			assertPreconditionViolationFor(() -> selectMethod("TestClass", "method", (String) null));
 		}
 
 		@SuppressWarnings("DataFlowIssue")
 		@Test
 		@DisplayName("Preconditions: selectMethod(className, methodName, parameterTypes)")
 		void selectMethodByClassNameMethodNameAndParameterTypesPreconditions() {
-			assertViolatesPrecondition(() -> selectMethod("TestClass", null, int.class));
-			assertViolatesPrecondition(() -> selectMethod("TestClass", "", int.class));
-			assertViolatesPrecondition(() -> selectMethod("TestClass", "  ", int.class));
-			assertViolatesPrecondition(() -> selectMethod((String) null, "method", int.class));
-			assertViolatesPrecondition(() -> selectMethod("", "method", int.class));
-			assertViolatesPrecondition(() -> selectMethod("   ", "method", int.class));
-			assertViolatesPrecondition(() -> selectMethod("TestClass", "method", (Class<?>) null));
-			assertViolatesPrecondition(() -> selectMethod("TestClass", "method", new Class<?>[] { int.class, null }));
+			// @formatter:off
+			assertPreconditionViolationFor(() -> selectMethod("TestClass", null, int.class));
+			assertPreconditionViolationFor(() -> selectMethod("TestClass", "", int.class));
+			assertPreconditionViolationFor(() -> selectMethod("TestClass", "  ", int.class));
+			assertPreconditionViolationFor(() -> selectMethod((String) null, "method", int.class));
+			assertPreconditionViolationFor(() -> selectMethod("", "method", int.class));
+			assertPreconditionViolationFor(() -> selectMethod("   ", "method", int.class));
+			assertPreconditionViolationFor(() -> selectMethod("TestClass", "method", (Class<?>) null));
+			assertPreconditionViolationFor(() -> selectMethod("TestClass", "method", new Class<?>[] { int.class, null }));
+			// @formatter:on
 		}
 
 		@SuppressWarnings("DataFlowIssue")
 		@Test
 		@DisplayName("Preconditions: selectMethod(class, methodName)")
 		void selectMethodByClassAndMethodNamePreconditions() {
-			assertViolatesPrecondition(() -> selectMethod(testClass(), (String) null));
-			assertViolatesPrecondition(() -> selectMethod(testClass(), ""));
-			assertViolatesPrecondition(() -> selectMethod(testClass(), "  "));
-			assertViolatesPrecondition(() -> selectMethod((Class<?>) null, "method"));
+			assertPreconditionViolationFor(() -> selectMethod(testClass(), (String) null));
+			assertPreconditionViolationFor(() -> selectMethod(testClass(), ""));
+			assertPreconditionViolationFor(() -> selectMethod(testClass(), "  "));
+			assertPreconditionViolationFor(() -> selectMethod((Class<?>) null, "method"));
 		}
 
 		@SuppressWarnings("DataFlowIssue")
 		@Test
 		@DisplayName("Preconditions: selectMethod(class, methodName, parameterTypeNames)")
 		void selectMethodByClassMethodNameAndParameterTypeNamesPreconditions() {
-			assertViolatesPrecondition(() -> selectMethod((Class<?>) null, "method", "int"));
-			assertViolatesPrecondition(() -> selectMethod(testClass(), null, "int"));
-			assertViolatesPrecondition(() -> selectMethod(testClass(), "", "int"));
-			assertViolatesPrecondition(() -> selectMethod(testClass(), "  ", "int"));
-			assertViolatesPrecondition(() -> selectMethod(testClass(), "method", (String) null));
+			assertPreconditionViolationFor(() -> selectMethod((Class<?>) null, "method", "int"));
+			assertPreconditionViolationFor(() -> selectMethod(testClass(), null, "int"));
+			assertPreconditionViolationFor(() -> selectMethod(testClass(), "", "int"));
+			assertPreconditionViolationFor(() -> selectMethod(testClass(), "  ", "int"));
+			assertPreconditionViolationFor(() -> selectMethod(testClass(), "method", (String) null));
 		}
 
 		@SuppressWarnings("DataFlowIssue")
@@ -729,8 +731,8 @@ class DiscoverySelectorsTests {
 		@DisplayName("Preconditions: selectMethod(class, method)")
 		void selectMethodByClassAndMethodPreconditions() {
 			var method = getClass().getDeclaredMethods()[0];
-			assertViolatesPrecondition(() -> selectMethod(null, method));
-			assertViolatesPrecondition(() -> selectMethod(testClass(), (Method) null));
+			assertPreconditionViolationFor(() -> selectMethod(null, method));
+			assertPreconditionViolationFor(() -> selectMethod(testClass(), (Method) null));
 		}
 
 		@ParameterizedTest(name = "FQMN: ''{0}''")
@@ -1235,11 +1237,11 @@ class DiscoverySelectorsTests {
 		@SuppressWarnings("DataFlowIssue")
 		@Test
 		void selectNestedClassPreconditions() {
-			assertViolatesPrecondition(() -> selectNestedClass(null, "ClassName"));
-			assertViolatesPrecondition(() -> selectNestedClass(List.of(), "ClassName"));
-			assertViolatesPrecondition(() -> selectNestedClass(List.of("ClassName"), null));
-			assertViolatesPrecondition(() -> selectNestedClass(List.of("ClassName"), ""));
-			assertViolatesPrecondition(() -> selectNestedClass(List.of("ClassName"), " "));
+			assertPreconditionViolationFor(() -> selectNestedClass(null, "ClassName"));
+			assertPreconditionViolationFor(() -> selectNestedClass(List.of(), "ClassName"));
+			assertPreconditionViolationFor(() -> selectNestedClass(List.of("ClassName"), null));
+			assertPreconditionViolationFor(() -> selectNestedClass(List.of("ClassName"), ""));
+			assertPreconditionViolationFor(() -> selectNestedClass(List.of("ClassName"), " "));
 		}
 
 		@Test
@@ -1404,26 +1406,27 @@ class DiscoverySelectorsTests {
 		@Test
 		@DisplayName("Preconditions: selectNestedMethod(enclosingClassNames, nestedClassName, methodName)")
 		void selectNestedMethodByEnclosingClassNamesAndMethodNamePreconditions() {
-			assertViolatesPrecondition(() -> selectNestedMethod(null, "ClassName", "methodName"));
-			assertViolatesPrecondition(() -> selectNestedMethod(List.of(), "ClassName", "methodName"));
-			assertViolatesPrecondition(() -> selectNestedMethod(List.of("ClassName"), null, "methodName"));
-			assertViolatesPrecondition(() -> selectNestedMethod(List.of("ClassName"), " ", "methodName"));
-			assertViolatesPrecondition(() -> selectNestedMethod(List.of("ClassName"), "ClassName", null));
-			assertViolatesPrecondition(() -> selectNestedMethod(List.of("ClassName"), "ClassName", " "));
+			assertPreconditionViolationFor(() -> selectNestedMethod(null, "ClassName", "methodName"));
+			assertPreconditionViolationFor(() -> selectNestedMethod(List.of(), "ClassName", "methodName"));
+			assertPreconditionViolationFor(() -> selectNestedMethod(List.of("ClassName"), null, "methodName"));
+			assertPreconditionViolationFor(() -> selectNestedMethod(List.of("ClassName"), " ", "methodName"));
+			assertPreconditionViolationFor(() -> selectNestedMethod(List.of("ClassName"), "ClassName", null));
+			assertPreconditionViolationFor(() -> selectNestedMethod(List.of("ClassName"), "ClassName", " "));
 		}
 
 		@SuppressWarnings("DataFlowIssue")
 		@Test
 		@DisplayName("Preconditions: selectNestedMethod(enclosingClassNames, nestedClassName, methodName, parameterTypeNames)")
 		void selectNestedMethodByEnclosingClassNamesMethodNameAndParameterTypeNamesPreconditions() {
-			assertViolatesPrecondition(() -> selectNestedMethod(null, "ClassName", "methodName", "int"));
-			assertViolatesPrecondition(() -> selectNestedMethod(List.of(), "ClassName", "methodName", "int"));
-			assertViolatesPrecondition(() -> selectNestedMethod(List.of("ClassName"), null, "methodName", "int"));
-			assertViolatesPrecondition(() -> selectNestedMethod(List.of("ClassName"), " ", "methodName", "int"));
-			assertViolatesPrecondition(() -> selectNestedMethod(List.of("ClassName"), "ClassName", null, "int"));
-			assertViolatesPrecondition(() -> selectNestedMethod(List.of("ClassName"), "ClassName", " ", "int"));
-			assertViolatesPrecondition(
-				() -> selectNestedMethod(List.of("ClassName"), "ClassName", "methodName", (String) null));
+			// @formatter:off
+			assertPreconditionViolationFor(() -> selectNestedMethod(null, "ClassName", "methodName", "int"));
+			assertPreconditionViolationFor(() -> selectNestedMethod(List.of(), "ClassName", "methodName", "int"));
+			assertPreconditionViolationFor(() -> selectNestedMethod(List.of("ClassName"), null, "methodName", "int"));
+			assertPreconditionViolationFor(() -> selectNestedMethod(List.of("ClassName"), " ", "methodName", "int"));
+			assertPreconditionViolationFor(() -> selectNestedMethod(List.of("ClassName"), "ClassName", null, "int"));
+			assertPreconditionViolationFor(() -> selectNestedMethod(List.of("ClassName"), "ClassName", " ", "int"));
+			assertPreconditionViolationFor(() -> selectNestedMethod(List.of("ClassName"), "ClassName", "methodName", (String) null));
+			// @formatter:on
 		}
 
 		/**
@@ -1433,16 +1436,16 @@ class DiscoverySelectorsTests {
 		@Test
 		@DisplayName("Preconditions: selectNestedMethod(enclosingClassNames, nestedClassName, methodName, parameterTypes)")
 		void selectNestedMethodByEnclosingClassNamesMethodNameAndParameterTypesPreconditions() {
-			assertViolatesPrecondition(() -> selectNestedMethod(null, "ClassName", "methodName", int.class));
-			assertViolatesPrecondition(() -> selectNestedMethod(List.of(), "ClassName", "methodName", int.class));
-			assertViolatesPrecondition(() -> selectNestedMethod(List.of("ClassName"), null, "methodName", int.class));
-			assertViolatesPrecondition(() -> selectNestedMethod(List.of("ClassName"), " ", "methodName", int.class));
-			assertViolatesPrecondition(() -> selectNestedMethod(List.of("ClassName"), "ClassName", null, int.class));
-			assertViolatesPrecondition(() -> selectNestedMethod(List.of("ClassName"), "ClassName", " ", int.class));
-			assertViolatesPrecondition(
-				() -> selectNestedMethod(List.of("ClassName"), "ClassName", "methodName", (Class<?>) null));
-			assertViolatesPrecondition(() -> selectNestedMethod(List.of("ClassName"), "ClassName", "methodName",
-				new Class<?>[] { int.class, null }));
+			// @formatter:off
+			assertPreconditionViolationFor(() -> selectNestedMethod(null, "ClassName", "methodName", int.class));
+			assertPreconditionViolationFor(() -> selectNestedMethod(List.of(), "ClassName", "methodName", int.class));
+			assertPreconditionViolationFor(() -> selectNestedMethod(List.of("ClassName"), null, "methodName", int.class));
+			assertPreconditionViolationFor(() -> selectNestedMethod(List.of("ClassName"), " ", "methodName", int.class));
+			assertPreconditionViolationFor(() -> selectNestedMethod(List.of("ClassName"), "ClassName", null, int.class));
+			assertPreconditionViolationFor(() -> selectNestedMethod(List.of("ClassName"), "ClassName", " ", int.class));
+			assertPreconditionViolationFor(() -> selectNestedMethod(List.of("ClassName"), "ClassName", "methodName", (Class<?>) null));
+			assertPreconditionViolationFor(() -> selectNestedMethod(List.of("ClassName"), "ClassName", "methodName", new Class<?>[] { int.class, null }));
+			// @formatter:on
 		}
 
 		/**
@@ -1455,15 +1458,15 @@ class DiscoverySelectorsTests {
 			List<Class<?>> enclosingClassList = List.of(ClassWithNestedInnerClass.class);
 			Class<?> nestedClass = ClassWithNestedInnerClass.NestedClass.class;
 
-			assertViolatesPrecondition(() -> selectNestedMethod(null, nestedClass, "methodName", int.class));
-			assertViolatesPrecondition(() -> selectNestedMethod(List.of(), nestedClass, "methodName", int.class));
-			assertViolatesPrecondition(() -> selectNestedMethod(enclosingClassList, null, "methodName", int.class));
-			assertViolatesPrecondition(() -> selectNestedMethod(enclosingClassList, nestedClass, null, int.class));
-			assertViolatesPrecondition(() -> selectNestedMethod(enclosingClassList, nestedClass, " ", int.class));
-			assertViolatesPrecondition(
-				() -> selectNestedMethod(enclosingClassList, nestedClass, "methodName", (Class<?>) null));
-			assertViolatesPrecondition(() -> selectNestedMethod(enclosingClassList, nestedClass, "methodName",
-				new Class<?>[] { int.class, null }));
+			// @formatter:off
+			assertPreconditionViolationFor(() -> selectNestedMethod(null, nestedClass, "methodName", int.class));
+			assertPreconditionViolationFor(() -> selectNestedMethod(List.of(), nestedClass, "methodName", int.class));
+			assertPreconditionViolationFor(() -> selectNestedMethod(enclosingClassList, null, "methodName", int.class));
+			assertPreconditionViolationFor(() -> selectNestedMethod(enclosingClassList, nestedClass, null, int.class));
+			assertPreconditionViolationFor(() -> selectNestedMethod(enclosingClassList, nestedClass, " ", int.class));
+			assertPreconditionViolationFor(() -> selectNestedMethod(enclosingClassList, nestedClass, "methodName", (Class<?>) null));
+			assertPreconditionViolationFor(() -> selectNestedMethod(enclosingClassList, nestedClass, "methodName", new Class<?>[] { int.class, null }));
+			// @formatter:on
 		}
 
 		static class ClassWithNestedInnerClass {
@@ -1521,10 +1524,6 @@ class DiscoverySelectorsTests {
 	}
 
 	// -------------------------------------------------------------------------
-
-	private void assertViolatesPrecondition(Executable precondition) {
-		assertPreconditionViolationFor(precondition::execute);
-	}
 
 	private static DiscoverySelector parseIdentifier(DiscoverySelector selector) {
 		return DiscoverySelectors.parse(toIdentifierString(selector)).orElseThrow();
